--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^1.1.0
   image_picker: ^1.0.5
   shared_preferences: ^2.2.2
+  geolocator: ^10.1.0
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
