--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   image_picker: ^1.0.5
   shared_preferences: ^2.2.2
   geolocator: ^10.1.0
+  app_settings: ^5.1.1
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
